# AppleBridge

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  ASSEMBLY_TEMPLATE.md  FILES_READY.md  FIXES_NEEDED.md  NEXT_STEPS.md  QUICKSTART.md  READ.ME  README.md  RX_TX_LEDS.md  START_HERE.md  TROUBLESHOOTING.md  command_clean_WORKING.c  copy_to_basilisk.sh
MacintoshBridgeHost/: MacintoshBridgeHost.entitlements  README.md
MacintoshBridgeHost/MacintoshBridgeHost/: AppDelegate.swift  CommandHandler.swift  Info.plist  LocalControlServer.swift  ScreenCapture.swift  TCPServer.swift
docs/: SETUP.md  USAGE.md
host/: __init__.py  build.py  capture.py  claude_bridge.py  config.py  convert_screenshot.py  encoding_convert.py  host_server.py  mac_client.py  main.py  protocol.py  pyproject.toml  requirements.txt  screenshot.py  send_command.py  test_command.py  test_commands.py
mac/: AppleBridge.r  BUILD_NOTES.md  Makefile  Makefile.68k
mac/include/: applebridge.h  mystring.h
mac/src/: command.c  main.c  mystring.c  network.c  protocol.c  screenshot.c  utils.c
mcp/: __init__.py  __main__.py  mac_connection.py  server.py  tools.py
protocol/: PROTOCOL.md
tests/: test_connection.py  test_protocol.py
